webshop-specs/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: order-api
  name: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order-api
    spec:
      containers:
      - image: webshop/order-api
        name: order-api
        imagePullPolicy: Never
        resources: {}
status: {}
