webshop-specs/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend-mvc
  name: frontend-mvc
spec:
  ports:
  - name: 8075-8075
    port: 8075
    protocol: TCP
    targetPort: 8075
  selector:
    app: frontend-mvc
  type: LoadBalancer
