webshop-specs/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: product-api
  name: product-api
spec:
  ports:
  - name: 8050-8050
    port: 8050
    protocol: TCP
    targetPort: 8050
  selector:
    app: product-api
  type: LoadBalancer
