webshop-specs/webshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webshop-fronted
  name: webshop-fronted
spec:
  ports:
  - name: 9090-9090
    port: 9090
    protocol: TCP
    targetPort: 80
  selector:
    app: webshop-fronted
    
  type: LoadBalancer
